# gba

./: .gitignore  Cargo.toml  README.md  _typos.toml  rust-toolchain.toml
.chats/: 20260124.md
apps/gba-cli/: Cargo.toml  README.md
apps/gba-cli/src/: cli.rs  config.rs  error.rs  main.rs  output.rs  run.rs  ui.rs
crates/gba-core/: Cargo.toml  README.md
crates/gba-core/src/: agent.rs  config.rs  context_builder.rs  error.rs  lib.rs  task.rs
crates/gba-core/tests/: integration_tests.rs
crates/gba-pm/: Cargo.toml  README.md
crates/gba-pm/src/: config.rs  error.rs  lib.rs  prompt.rs  template.rs
crates/gba-pm/templates/: implement.jinja2  init.jinja2  plan.jinja2  resume.jinja2  review.jinja2  verify.jinja2
crates/gba-pm/tests/: integration_tests.rs
specs/: design.md
