[workspace]
resolver = "3"
members = [
    "crates/gba-core",
    "crates/gba-pm",
    "apps/gba-cli",
]

[workspace.package]
version = "0.1.0"
authors = ["Your Name <YourName@yourdomain.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.48", default-features = false }
claude-agent-sdk-rs = "0.6"

# Prompt manager dependencies
minijinja = "2.8"

# CLI dependencies
clap = { version = "4.5", default-features = false }
ratatui = "0.30"

# Common dependencies
anyhow = "1.0"
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
validator = { version = "0.20", features = ["derive"] }

# Async & concurrency
tokio-util = { version = "0.7", default-features = false }
flume = "0.11"
dashmap = "6.1"
arc-swap = "1.8"
