[package]
name = "gba-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core execution engine for GBA - Claude Agent SDK wrapper"

[dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net"] }
claude-agent-sdk-rs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
flume = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util"] }
